<resources>
    <string name="app_name">Live Voting Udacity</string>
    <string name="facebook_application_id">908657969229585</string>
    <string name="google_client_id">1075004515109-909c6ksorlmt2888pj1l2fjg4pvj1aq3.apps.googleusercontent.com</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="twitter_app_key">VQoWzyTkBSBPdjEVkANZtxKzh</string>
    <string name="twitter_app_secret">QoMIuGOF0043FhDjvkbPg3NhOe4ikbyze8fDqWN1zhQNCOBVkz</string>
    <string name="login_sign_up">Sign Up</string>
    <string name="login_sign_in">SIgn In</string>
    <string name="sign_in_with_social_media">Sign In with Social Media</string>
    <string name="preferences_text">Fan Polls covers a variety of sports topics and has plans to add more in the future. Please select the sports categories below to receive news and polls for associated topics.</string>
    <string name="ncaa_mens_basketball_preference">NCAA Men\'s Basketball</string>
    <string name="ncaa_football_preference">NCAA Football</string>
    <string name="major_league_baseball_preference">Major League Baseball</string>
    <string name="national_football_league_preference">National Football League</string>
    <string name="national_basketball_league_preference">National Basketball League</string>
    <string name="national_hockey_league">National Hockey League</string>
    <string name="title_activity_preferences">PreferencesActivity</string>
    <string name="title_activity_poll">PollActivity</string>
    <string name="continue_preference">Continue</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_preferences">Preferences</string>
    <string name="drawer_item_request_poll">Request A Poll</string>
    <string name="drawer_item_suppport">Support</string>
    <string name="drawer_item_logut">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="View_Comments">View Comments</string>
    <string name="home_title">Today\'s Polls</string>
    <string name="pregs_frag_title">Preferences</string>
    <string name="todays_polls_title">Today\'s Polls</string>
    <string name="title_activity_loading">LoadingActivity</string>
    <string name="loading_text">Loading.....</string>
    <string name="total_vote_counter">Votes:   </string>
    <string name="no_results_description">No Results</string>
    <string name="loading_results">Loading Results...</string>
    <string name="your_vote_label">Your Vote:</string>
    <string name="title_activity_discussion_">Discussion_Activity</string>
    <string name="comment_added">Comment Added</string>
    <string name="title_activity_previous">PreviousActivity</string>
    <string name="drawer_item_previous_polls">Previous Polls</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="vote_submitted_label">Vote Submitted!</string>
    <string name="discussion_title_text">Discussion</string>
    <string name="latest_title">Latest Polls</string>
    <string name="loading_poll_data">Loading Poll Data....</string>
    <string name="new_text">New</string>
    <string name="how_many_answers_text">Number of Poll Answers:</string>
    <string name="create_poll_question">What is your poll question?</string>
    <string name="add_text">Add:</string>
    <string name="answer_one">Answer 1</string>
    <string name="answer_text">Answer </string>
    <string name="max_create_answers">The maximum number of answers is 5.</string>
    <string name="three">Three</string>
    <string name="four">Four</string>
    <string name="five">Five</string>
    <string name="answer_two">Answer 2</string>
    <string name="created_answer_editText_id">created_answer_editText_id_</string>
    <string name="poll_text">Poll</string>
    <string name="discussion_text">Discussion</string>
    <string name="title_activity_new_image">NewImageActivity</string>
    <string name="hint_search">Enter an Image Search Term.....</string>
    <string name="app_label">Fan Polls</string>
    <string name="search_hint">Enter an Image Search Term...</string>
    <string name="add_photo_question">Do you want to add this photo?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="poll_answers_greater_than_five">You can only add 5 answers.</string>
    <string name="no_image_selected">Please select an image before submitting.</string>
    <string name="add_image_dialog_title">Add Image</string>
    <string name="add_image_dialog_message">How do you want to add your image?</string>
    <string name="add_image_web">Web Search</string>
    <string name="add_image_camera">Camera</string>
    <string name="add_image_gallery">Gallery</string>
    <string name="camera_error">Error Loading Camera</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="enter_user_password">Please enter a username or password</string>
    <string name="no_user_found">User has not been created. Please sign up.</string>
    <string name="DISPLAY_NAME_LABEL">Display Name</string>
    <string name="display_name_hint">Enter your display name</string>
    <string name="dialog_done">Done</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_poll_host">PollHostActivity</string>
    <string name="title_activity_create">CreateActivity</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="poll_image">Poll Image</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="blank_poll_image">Empty Poll Image Placeholder</string>
    <string name="please_add_image">Please Add An Image</string>
    <string name="application_logo">Application Logo</string>
    <string name="add_answer_button">Add Answer</string>
    <string name="fab">New Image Button</string>
    <string name="create_poll_button">Submit Poll Button</string>
    <string name="votes">Votes:</string>
    <string name="authentication_failed_email">Authentication Failed with Email</string>
    <string name="login_failed">Login Failed</string>
    <string name="sign_in_delay">Signing In......</string>
    <string name="valid_email">Enter A Valid Email Address</string>
    <string name="alphanumeric">Please enter 4-15 alphanumeric characters</string>
    <string name="creating_account_delay">Creating Account.....</string>
    <string name="please_open_application">Please open app to view latest polls!</string>
</resources>
