<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/create_poll_linearlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".4">

        <ImageView
            android:contentDescription="@string/blank_poll_image"
            android:scaleType="fitXY"
            android:id="@+id/preview_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:background="@drawable/image_border">

        </ImageView>

        <android.support.design.widget.FloatingActionButton
            android:contentDescription="@string/fab"
            app:backgroundTint="@color/actionRed"
            android:id="@+id/add_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/fab_add"
            />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".6"
        android:isScrollContainer="false">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="false">

            <LinearLayout
                android:id="@+id/create_poll_questions_answer_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/create_poll_question_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/create_poll_question"
                        android:imeOptions="actionDone"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/how_many_answers_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:text="@string/how_many_answers_text"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/create_poll_answer_counter_TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="3dp"
                        android:layout_marginStart="3dp"
                        android:layout_toEndOf="@id/how_many_answers_textView"
                        android:layout_toRightOf="@id/how_many_answers_textView"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/add_TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="3dp"
                        android:layout_marginRight="3dp"
                        android:layout_toLeftOf="@+id/add_answers_button"
                        android:layout_toStartOf="@+id/add_answers_button"
                        android:text="@string/add_text"
                        android:textColor="@color/black"
                        android:textSize="16sp" />


                    <ImageView
                        android:contentDescription="@string/add_answer_button"
                        android:id="@+id/add_answers_button"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="bottom|end"
                        android:layout_marginBottom="6dp"
                        android:layout_marginEnd="6dp"
                        android:layout_marginRight="6dp"
                        android:background="@drawable/fab_transparent"
                        android:focusable="true"
                        android:clickable="true"
                        android:src="@drawable/ic_add_white_24dp"
                        android:visibility="visible" />

                </RelativeLayout>


            </LinearLayout>

        </ScrollView>

        <android.support.design.widget.FloatingActionButton
            android:contentDescription="@string/create_poll_button"
            android:id="@+id/submit_poll_FAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginRight="6dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_navigate_next_white_24dp"
            android:visibility="visible"
            app:backgroundTint="@color/actionRed"
            app:elevation="4dp" />
    </FrameLayout>

</LinearLayout>